add_1_from_main_85_from_lineage_proposals

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -153,7 +153,17 @@
       "processed  1390 milestones\n",
       "processed  1400 milestones\n",
       "processed  1410 milestones\n",
-      "processed  1420 milestones\n"
+      "processed  1420 milestones\n",
+      "processed  1430 milestones\n",
+      "processed  1440 milestones\n",
+      "processed  1450 milestones\n",
+      "processed  1460 milestones\n",
+      "processed  1470 milestones\n",
+      "processed  1480 milestones\n",
+      "processed  1490 milestones\n",
+      "processed  1500 milestones\n",
+      "processed  1510 milestones\n",
+      "processed  1520 milestones\n"
      ]
     }
    ],
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -287,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -310,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -318,38 +328,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['KR.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['KV.2', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.4.6', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.7.1', 'sars-cov-2-variants/lineage-proposals#1371']\n",
-      "['JN.1.7.3', 'sars-cov-2-variants/lineage-proposals#1343']\n",
-      "['JN.1.8.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KP.2.1', 'sars-cov-2-variants/lineage-proposals#1440']\n",
-      "['KP.2.2', 'sars-cov-2-variants/lineage-proposals#1446']\n",
-      "['KP.3', 'sars-cov-2-variants/lineage-proposals#1410']\n",
-      "['JN.1.18.1', 'sars-cov-2-variants/lineage-proposals#1414']\n",
-      "['JN.1.18.2', 'sars-cov-2-variants/lineage-proposals#1441']\n",
-      "['JN.1.26', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.28.1', 'sars-cov-2-variants/lineage-proposals#1244']\n",
-      "['KW.1', 'sars-cov-2-variants/lineage-proposals#1244']\n",
-      "['KW.1.1', 'sars-cov-2-variants/lineage-proposals#1244']\n",
-      "['JN.1.30.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KU.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.31', 'sars-cov-2-variants/lineage-proposals#1319']\n",
-      "['JN.1.35', 'sars-cov-2-variants/lineage-proposals#1362']\n",
-      "['JN.1.36', 'sars-cov-2-variants/lineage-proposals#1326']\n",
-      "['JN.1.36.1', 'sars-cov-2-variants/lineage-proposals#1326']\n",
-      "['JN.1.40', 'sars-cov-2-variants/lineage-proposals#1451']\n",
-      "['JN.1.41', 'sars-cov-2-variants/lineage-proposals#1256']\n",
-      "['JN.1.42.1', 'sars-cov-2-variants/lineage-proposals#1474']\n",
-      "['JN.1.44', 'sars-cov-2-variants/lineage-proposals#987']\n",
-      "['JN.13.1', 'sars-cov-2-variants/lineage-proposals#1386']\n",
-      "['JQ.2.1', 'sars-cov-2-variants/lineage-proposals#1373']\n",
+      "['JN.1.1.3', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KR.1.1', 'sars-cov-2-variants/lineage-proposals#1545']\n",
+      "['KR.3', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.1.8', 'sars-cov-2-variants/lineage-proposals#1521']\n",
+      "['JN.1.1.9', 'sars-cov-2-variants/lineage-proposals#1525']\n",
+      "['LL.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['LE.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['LE.1.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['LE.1.3.1', 'sars-cov-2-variants/lineage-proposals#1612']\n",
+      "['JN.1.7.4', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.7.5', 'sars-cov-2-variants/lineage-proposals#1374']\n",
+      "['LK.1', 'sars-cov-2-variants/lineage-proposals#1374']\n",
+      "['LB.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['LB.1.2.1', 'sars-cov-2-variants/lineage-proposals#1559']\n",
+      "['LB.1.3.1', 'sars-cov-2-variants/lineage-proposals#1620']\n",
+      "['KP.1.1.2', 'sars-cov-2-variants/lineage-proposals#1541']\n",
+      "['KP.1.1.3', 'sars-cov-2-variants/lineage-proposals#1502']\n",
+      "['LP.1.1', 'sars-cov-2-variants/lineage-proposals#1633']\n",
+      "['KP.1.2', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['KP.2.3', 'sars-cov-2-variants/lineage-proposals#1459']\n",
+      "['KP.2.3.1', 'sars-cov-2-variants/lineage-proposals#1548']\n",
+      "['KP.2.3.4', 'sars-cov-2-variants/lineage-proposals#1596']\n",
+      "['KP.2.4', 'sars-cov-2-variants/lineage-proposals#1524']\n",
+      "['KP.2.5', 'sars-cov-2-variants/lineage-proposals#1527']\n",
+      "['KP.2.8', 'sars-cov-2-variants/lineage-proposals#1546']\n",
+      "['KP.2.9', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KP.2.10', 'sars-cov-2-variants/lineage-proposals#1553']\n",
+      "['KP.2.11', 'sars-cov-2-variants/lineage-proposals#1520']\n",
+      "['KP.2.12', 'sars-cov-2-variants/lineage-proposals#1550']\n",
+      "['KP.2.14', 'sars-cov-2-variants/lineage-proposals#1578']\n",
+      "['KP.3.1.1', 'sars-cov-2-variants/lineage-proposals#1563']\n",
+      "['MC.1', 'sars-cov-2-variants/lineage-proposals#1638']\n",
+      "['KP.3.1.5', 'sars-cov-2-variants/lineage-proposals#1614']\n",
+      "['KP.3.2.1', 'sars-cov-2-variants/lineage-proposals#1556']\n",
+      "['KP.3.2.5', 'sars-cov-2-variants/lineage-proposals#1604']\n",
+      "['KP.3.3', 'sars-cov-2-variants/lineage-proposals#1531']\n",
+      "['KP.3.3.1', 'sars-cov-2-variants/lineage-proposals#1651']\n",
+      "['KP.4.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KP.4.1.2', 'sars-cov-2-variants/lineage-proposals#1611']\n",
+      "['KP.4.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KP.5', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['KS.1.1', 'sars-cov-2-variants/lineage-proposals#1565']\n",
+      "['JN.1.15.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['LU.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['LU.2', 'sars-cov-2-variants/lineage-proposals#1652']\n",
+      "['LF.1.1', 'sars-cov-2-variants/lineage-proposals#1448']\n",
+      "['LF.2', 'sars-cov-2-variants/lineage-proposals#1502']\n",
+      "['LF.3.1.1', 'sars-cov-2-variants/lineage-proposals#1558']\n",
+      "['LF.4.1', 'sars-cov-2-variants/lineage-proposals#1590']\n",
+      "['JN.1.16.2', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['LA.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['LA.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.18.3', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['MA.1', 'sars-cov-2-variants/lineage-proposals#1635']\n",
+      "['JN.1.18.5', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.23.1', 'sars-cov-2-variants/lineage-proposals#1552']\n",
+      "['JN.1.24.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['LM.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KW.1.1.1', 'sars-cov-2-variants/lineage-proposals#1504']\n",
+      "['LG.1', 'sars-cov-2-variants/lineage-proposals#1504']\n",
+      "['JN.1.29.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.32.1', 'sars-cov-2-variants/lineage-proposals#1442']\n",
+      "['JN.1.39.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['JN.1.47.1', 'sars-cov-2-variants/lineage-proposals#1318']\n",
+      "['JN.1.47.2', 'sars-cov-2-variants/lineage-proposals#1097']\n",
+      "['JN.1.48.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['MB.1.1', 'sars-cov-2-variants/lineage-proposals#1659']\n",
+      "['JN.1.55.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.55.2', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.1.62', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['JN.11.1', 'sars-cov-2-variants/lineage-proposals#1303']\n",
+      "['JQ.2.1.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
       "['JH.2', '#2068']\n",
-      "['GE.1.2.2', 'sars-cov-2-variants/lineage-proposals#1340']\n",
-      "['XDD.1.1.1', 'sars-cov-2-variants/lineage-proposals#1450']\n",
-      "['XDK.1', 'sars-cov-2-variants/lineage-proposals#1407']\n",
-      "['XDP.1', 'sars-cov-2-variants/lineage-proposals#1358']\n"
+      "['XDK.1.1', 'sars-cov-2-variants/lineage-proposals#1490']\n",
+      "['XDK.1.2', 'sars-cov-2-variants/lineage-proposals#1407']\n",
+      "['XDK.2', 'sars-cov-2-variants/lineage-proposals#1385']\n",
+      "['XDK.3', 'sars-cov-2-variants/lineage-proposals#1511']\n",
+      "['XDK.4.1', 'sars-cov-2-variants/lineage-proposals#1467']\n",
+      "['XDK.6', 'sars-cov-2-variants/lineage-proposals#1572']\n",
+      "['XDP.2', 'sars-cov-2-variants/lineage-proposals#1432']\n",
+      "['XDQ.1.1', 'sars-cov-2-variants/lineage-proposals#1523']\n",
+      "['XDQ.2', 'sars-cov-2-variants/lineage-proposals#1408']\n",
+      "['XDQ.3', 'sars-cov-2-variants/lineage-proposals#1508']\n",
+      "['XDR.1', 'sars-cov-2-variants/lineage-proposals#1542']\n",
+      "['XDZ', 'sars-cov-2-variants/lineage-proposals#1356']\n",
+      "['XEB', 'sars-cov-2-variants/lineage-proposals#1290']\n"
      ]
     }
    ],
@@ -406,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -416,7 +480,7 @@
      "text": [
       "Add  1  references from cov-lineages/pango-designation.\n",
       "Upgrade  0  references from cov-lineages/pango-designation.\n",
-      "Add  31  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  85  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
