add_1_from_main_79_from_secondary

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -163,7 +163,17 @@
       "processed  1490 milestones\n",
       "processed  1500 milestones\n",
       "processed  1510 milestones\n",
-      "processed  1520 milestones\n"
+      "processed  1520 milestones\n",
+      "processed  1530 milestones\n",
+      "processed  1540 milestones\n",
+      "processed  1550 milestones\n",
+      "processed  1560 milestones\n",
+      "processed  1570 milestones\n",
+      "processed  1580 milestones\n",
+      "processed  1590 milestones\n",
+      "processed  1600 milestones\n",
+      "processed  1610 milestones\n",
+      "processed  1620 milestones\n"
      ]
     }
    ],
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "88a367db",
    "metadata": {},
    "outputs": [],
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -328,92 +338,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['JN.1.1.3', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KR.1.1', 'sars-cov-2-variants/lineage-proposals#1545']\n",
-      "['KR.3', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.1.8', 'sars-cov-2-variants/lineage-proposals#1521']\n",
-      "['JN.1.1.9', 'sars-cov-2-variants/lineage-proposals#1525']\n",
-      "['LL.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['LE.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['LE.1.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['LE.1.3.1', 'sars-cov-2-variants/lineage-proposals#1612']\n",
-      "['JN.1.7.4', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.7.5', 'sars-cov-2-variants/lineage-proposals#1374']\n",
-      "['LK.1', 'sars-cov-2-variants/lineage-proposals#1374']\n",
-      "['LB.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['LB.1.2.1', 'sars-cov-2-variants/lineage-proposals#1559']\n",
-      "['LB.1.3.1', 'sars-cov-2-variants/lineage-proposals#1620']\n",
-      "['KP.1.1.2', 'sars-cov-2-variants/lineage-proposals#1541']\n",
-      "['KP.1.1.3', 'sars-cov-2-variants/lineage-proposals#1502']\n",
-      "['LP.1.1', 'sars-cov-2-variants/lineage-proposals#1633']\n",
-      "['KP.1.2', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['KP.2.3', 'sars-cov-2-variants/lineage-proposals#1459']\n",
-      "['KP.2.3.1', 'sars-cov-2-variants/lineage-proposals#1548']\n",
-      "['KP.2.3.4', 'sars-cov-2-variants/lineage-proposals#1596']\n",
-      "['KP.2.4', 'sars-cov-2-variants/lineage-proposals#1524']\n",
-      "['KP.2.5', 'sars-cov-2-variants/lineage-proposals#1527']\n",
-      "['KP.2.8', 'sars-cov-2-variants/lineage-proposals#1546']\n",
-      "['KP.2.9', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KP.2.10', 'sars-cov-2-variants/lineage-proposals#1553']\n",
-      "['KP.2.11', 'sars-cov-2-variants/lineage-proposals#1520']\n",
-      "['KP.2.12', 'sars-cov-2-variants/lineage-proposals#1550']\n",
-      "['KP.2.14', 'sars-cov-2-variants/lineage-proposals#1578']\n",
-      "['KP.3.1.1', 'sars-cov-2-variants/lineage-proposals#1563']\n",
-      "['MC.1', 'sars-cov-2-variants/lineage-proposals#1638']\n",
-      "['KP.3.1.5', 'sars-cov-2-variants/lineage-proposals#1614']\n",
-      "['KP.3.2.1', 'sars-cov-2-variants/lineage-proposals#1556']\n",
-      "['KP.3.2.5', 'sars-cov-2-variants/lineage-proposals#1604']\n",
-      "['KP.3.3', 'sars-cov-2-variants/lineage-proposals#1531']\n",
-      "['KP.3.3.1', 'sars-cov-2-variants/lineage-proposals#1651']\n",
-      "['KP.4.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KP.4.1.2', 'sars-cov-2-variants/lineage-proposals#1611']\n",
-      "['KP.4.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KP.5', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['KS.1.1', 'sars-cov-2-variants/lineage-proposals#1565']\n",
-      "['JN.1.15.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['LU.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['LU.2', 'sars-cov-2-variants/lineage-proposals#1652']\n",
-      "['LF.1.1', 'sars-cov-2-variants/lineage-proposals#1448']\n",
-      "['LF.2', 'sars-cov-2-variants/lineage-proposals#1502']\n",
-      "['LF.3.1.1', 'sars-cov-2-variants/lineage-proposals#1558']\n",
-      "['LF.4.1', 'sars-cov-2-variants/lineage-proposals#1590']\n",
-      "['JN.1.16.2', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['LA.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['LA.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.18.3', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['MA.1', 'sars-cov-2-variants/lineage-proposals#1635']\n",
-      "['JN.1.18.5', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.23.1', 'sars-cov-2-variants/lineage-proposals#1552']\n",
-      "['JN.1.24.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['LM.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['KW.1.1.1', 'sars-cov-2-variants/lineage-proposals#1504']\n",
-      "['LG.1', 'sars-cov-2-variants/lineage-proposals#1504']\n",
-      "['JN.1.29.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.32.1', 'sars-cov-2-variants/lineage-proposals#1442']\n",
-      "['JN.1.39.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['JN.1.47.1', 'sars-cov-2-variants/lineage-proposals#1318']\n",
-      "['JN.1.47.2', 'sars-cov-2-variants/lineage-proposals#1097']\n",
-      "['JN.1.48.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['MB.1.1', 'sars-cov-2-variants/lineage-proposals#1659']\n",
-      "['JN.1.55.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.55.2', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.1.62', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['JN.11.1', 'sars-cov-2-variants/lineage-proposals#1303']\n",
-      "['JQ.2.1.1', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['KR.1.3', 'sars-cov-2-variants/lineage-proposals#1676']\n",
+      "['LK.2.1', 'sars-cov-2-variants/lineage-proposals#1679']\n",
+      "['MQ.2', 'sars-cov-2-variants/lineage-proposals#1822']\n",
+      "['JN.1.7.9', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['LB.1.2.2', 'sars-cov-2-variants/lineage-proposals#1792']\n",
+      "['LB.1.2.3', 'sars-cov-2-variants/lineage-proposals#1730']\n",
+      "['LB.1.4.3', 'sars-cov-2-variants/lineage-proposals#1911']\n",
+      "['LB.1.7.1', 'sars-cov-2-variants/lineage-proposals#1641']\n",
+      "['LB.1.7.3', 'sars-cov-2-variants/lineage-proposals#1555']\n",
+      "['LB.1.9', 'sars-cov-2-variants/lineage-proposals#1874']\n",
+      "['MG.1', 'sars-cov-2-variants/lineage-proposals#1623']\n",
+      "['LP.1.2', 'sars-cov-2-variants/lineage-proposals#1664']\n",
+      "['LP.4', 'sars-cov-2-variants/lineage-proposals#1607']\n",
+      "['MU.1', 'sars-cov-2-variants/lineage-proposals#1646']\n",
+      "['KP.2.3.3', 'sars-cov-2-variants/lineage-proposals#1618']\n",
+      "['KP.2.3.5', 'sars-cov-2-variants/lineage-proposals#1645']\n",
+      "['KP.2.3.6', 'sars-cov-2-variants/lineage-proposals#1582']\n",
+      "['KP.2.20.1', 'sars-cov-2-variants/lineage-proposals#1723']\n",
+      "['KP.2.22', 'sars-cov-2-variants/lineage-proposals#1502']\n",
+      "['KP.2.23', 'sars-cov-2-variants/lineage-proposals#1502']\n",
+      "['KP.2.24', 'sars-cov-2-variants/lineage-proposals#1502']\n",
+      "['MC.2', 'sars-cov-2-variants/lineage-proposals#1707']\n",
+      "['MC.2.1', 'sars-cov-2-variants/lineage-proposals#1707']\n",
+      "['MC.3', 'sars-cov-2-variants/lineage-proposals#1733']\n",
+      "['MC.4', 'sars-cov-2-variants/lineage-proposals#1772']\n",
+      "['MC.5', 'sars-cov-2-variants/lineage-proposals#1790']\n",
+      "['MC.7', 'sars-cov-2-variants/lineage-proposals#1695']\n",
+      "['MC.8.1', 'sars-cov-2-variants/lineage-proposals#1779']\n",
+      "['MC.11.1', 'sars-cov-2-variants/lineage-proposals#1857']\n",
+      "['MC.12', 'sars-cov-2-variants/lineage-proposals#1865']\n",
+      "['MC.14', 'sars-cov-2-variants/lineage-proposals#1815']\n",
+      "['MM.1', 'sars-cov-2-variants/lineage-proposals#1624']\n",
+      "['MM.2', 'sars-cov-2-variants/lineage-proposals#1716']\n",
+      "['MK.1', 'sars-cov-2-variants/lineage-proposals#1605']\n",
+      "['MK.2', 'sars-cov-2-variants/lineage-proposals#1606']\n",
+      "['MK.3', 'sars-cov-2-variants/lineage-proposals#1655']\n",
+      "['KP.3.1.8', 'sars-cov-2-variants/lineage-proposals#1615']\n",
+      "['LW.1.1', 'sars-cov-2-variants/lineage-proposals#1776']\n",
+      "['KP.3.3.2', 'sars-cov-2-variants/lineage-proposals#1673']\n",
+      "['ML.1', 'sars-cov-2-variants/lineage-proposals#1683']\n",
+      "['KP.3.4.1', 'sars-cov-2-variants/lineage-proposals#1576']\n",
+      "['KP.3.5', 'sars-cov-2-variants/lineage-proposals#1630']\n",
+      "['KP.3.6', 'sars-cov-2-variants/lineage-proposals#1748']\n",
+      "['KP.6', 'sars-cov-2-variants/lineage-proposals#1682']\n",
+      "['KS.1.3', 'sars-cov-2-variants/lineage-proposals#1535']\n",
+      "['KS.1.4', 'sars-cov-2-variants/lineage-proposals#1752']\n",
+      "['LU.2.1', 'sars-cov-2-variants/lineage-proposals#1751']\n",
+      "['LU.2.1.1', 'sars-cov-2-variants/lineage-proposals#1751']\n",
+      "['LU.2.2', 'sars-cov-2-variants/lineage-proposals#1830']\n",
+      "['LF.5', 'sars-cov-2-variants/lineage-proposals#1627']\n",
+      "['LF.8', 'sars-cov-2-variants/lineage-proposals#1863']\n",
+      "['LF.8.1', 'sars-cov-2-variants/lineage-proposals#1863']\n",
+      "['LF.8.1.1', 'sars-cov-2-variants/lineage-proposals#1863']\n",
+      "['LF.9', 'sars-cov-2-variants/lineage-proposals#1718']\n",
+      "['LF.9.1', 'sars-cov-2-variants/lineage-proposals#1718']\n",
+      "['JN.1.16.4', 'sars-cov-2-variants/lineage-proposals#1702']\n",
+      "['MT.1', 'sars-cov-2-variants/lineage-proposals#1702']\n",
+      "['JN.1.16.5', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['LZ.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "['MA.1.1', 'sars-cov-2-variants/lineage-proposals#1761']\n",
+      "['MA.1.1.1', 'sars-cov-2-variants/lineage-proposals#1761']\n",
+      "['MN.1', 'sars-cov-2-variants/lineage-proposals#1685']\n",
+      "['MS.1', 'sars-cov-2-variants/lineage-proposals#1692']\n",
+      "['JN.1.48.3', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['ME.1', 'sars-cov-2-variants/lineage-proposals#1657']\n",
+      "['JN.1.59.1', 'sars-cov-2-variants/lineage-proposals#1771']\n",
+      "['JN.1.63', 'sars-cov-2-variants/lineage-proposals#1513']\n",
+      "['JN.1.63.1', 'sars-cov-2-variants/lineage-proposals#1513']\n",
+      "['JN.1.67.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
+      "['MP.1', 'sars-cov-2-variants/lineage-proposals#1782']\n",
+      "['MP.1.1', 'sars-cov-2-variants/lineage-proposals#1782']\n",
       "['JH.2', '#2068']\n",
-      "['XDK.1.1', 'sars-cov-2-variants/lineage-proposals#1490']\n",
-      "['XDK.1.2', 'sars-cov-2-variants/lineage-proposals#1407']\n",
-      "['XDK.2', 'sars-cov-2-variants/lineage-proposals#1385']\n",
-      "['XDK.3', 'sars-cov-2-variants/lineage-proposals#1511']\n",
-      "['XDK.4.1', 'sars-cov-2-variants/lineage-proposals#1467']\n",
-      "['XDK.6', 'sars-cov-2-variants/lineage-proposals#1572']\n",
-      "['XDP.2', 'sars-cov-2-variants/lineage-proposals#1432']\n",
-      "['XDQ.1.1', 'sars-cov-2-variants/lineage-proposals#1523']\n",
-      "['XDQ.2', 'sars-cov-2-variants/lineage-proposals#1408']\n",
-      "['XDQ.3', 'sars-cov-2-variants/lineage-proposals#1508']\n",
-      "['XDR.1', 'sars-cov-2-variants/lineage-proposals#1542']\n",
-      "['XDZ', 'sars-cov-2-variants/lineage-proposals#1356']\n",
-      "['XEB', 'sars-cov-2-variants/lineage-proposals#1290']\n"
+      "['XDR.1.1', 'sars-cov-2-variants/lineage-proposals#1795']\n",
+      "['XDV.1.1', 'sars-cov-2-variants/lineage-proposals#1820']\n",
+      "['XDV.1.2', 'sars-cov-2-variants/lineage-proposals#1617']\n",
+      "['XDV.1.2.1', 'sars-cov-2-variants/lineage-proposals#1617']\n",
+      "['XDV.1.3', 'sars-cov-2-variants/lineage-proposals#1597']\n",
+      "['XDV.1.5', 'sars-cov-2-variants/lineage-proposals#1840']\n",
+      "['XDV.1.10', 'sars-cov-2-variants/lineage-proposals#1849']\n",
+      "['XEC.1', 'sars-cov-2-variants/lineage-proposals#1869']\n"
      ]
     }
    ],
