add 66 autorefs 	modified:   automated-issue-ref.ipynb 	modified:   autoref/milestone.txt 	modified:   autoref/missing_refs.txt 	modified:   lineage_notes.txt 	modified:   automated-issue-ref.ipynb

--- a/automated-issue-ref.ipynb
+++ b/automated-issue-ref.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f64573a2",
    "metadata": {
     "scrolled": true
@@ -173,7 +173,14 @@
       "processed  1590 milestones\n",
       "processed  1600 milestones\n",
       "processed  1610 milestones\n",
-      "processed  1620 milestones\n"
+      "processed  1620 milestones\n",
+      "processed  1630 milestones\n",
+      "processed  1640 milestones\n",
+      "processed  1650 milestones\n",
+      "processed  1660 milestones\n",
+      "processed  1670 milestones\n",
+      "processed  1680 milestones\n",
+      "processed  1690 milestones\n"
      ]
     }
    ],
@@ -288,6 +295,7 @@
     "        di='sars-cov-2-variants/lineage-proposals'\n",
     "    actual_milestone='\"'+real_milestone[0]+'\"'\n",
     "    url=\"https://github.com/\"+di+\"/issues?q=milestone:\"+actual_milestone\n",
+    "    print(url)\n",
     "    res=request.urlopen(url)\n",
     "    rp=res.read()\n",
     "    rp=rp.decode('utf-8')\n",
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f5b15585",
    "metadata": {},
    "outputs": [],
@@ -330,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a56544a8",
    "metadata": {},
    "outputs": [
@@ -338,86 +346,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['KR.1.3', 'sars-cov-2-variants/lineage-proposals#1676']\n",
-      "['LK.2.1', 'sars-cov-2-variants/lineage-proposals#1679']\n",
-      "['MQ.2', 'sars-cov-2-variants/lineage-proposals#1822']\n",
-      "['JN.1.7.9', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['LB.1.2.2', 'sars-cov-2-variants/lineage-proposals#1792']\n",
-      "['LB.1.2.3', 'sars-cov-2-variants/lineage-proposals#1730']\n",
-      "['LB.1.4.3', 'sars-cov-2-variants/lineage-proposals#1911']\n",
-      "['LB.1.7.1', 'sars-cov-2-variants/lineage-proposals#1641']\n",
-      "['LB.1.7.3', 'sars-cov-2-variants/lineage-proposals#1555']\n",
-      "['LB.1.9', 'sars-cov-2-variants/lineage-proposals#1874']\n",
-      "['MG.1', 'sars-cov-2-variants/lineage-proposals#1623']\n",
-      "['LP.1.2', 'sars-cov-2-variants/lineage-proposals#1664']\n",
-      "['LP.4', 'sars-cov-2-variants/lineage-proposals#1607']\n",
-      "['MU.1', 'sars-cov-2-variants/lineage-proposals#1646']\n",
-      "['KP.2.3.3', 'sars-cov-2-variants/lineage-proposals#1618']\n",
-      "['KP.2.3.5', 'sars-cov-2-variants/lineage-proposals#1645']\n",
-      "['KP.2.3.6', 'sars-cov-2-variants/lineage-proposals#1582']\n",
-      "['KP.2.20.1', 'sars-cov-2-variants/lineage-proposals#1723']\n",
-      "['KP.2.22', 'sars-cov-2-variants/lineage-proposals#1502']\n",
-      "['KP.2.23', 'sars-cov-2-variants/lineage-proposals#1502']\n",
-      "['KP.2.24', 'sars-cov-2-variants/lineage-proposals#1502']\n",
-      "['MC.2', 'sars-cov-2-variants/lineage-proposals#1707']\n",
-      "['MC.2.1', 'sars-cov-2-variants/lineage-proposals#1707']\n",
-      "['MC.3', 'sars-cov-2-variants/lineage-proposals#1733']\n",
-      "['MC.4', 'sars-cov-2-variants/lineage-proposals#1772']\n",
-      "['MC.5', 'sars-cov-2-variants/lineage-proposals#1790']\n",
-      "['MC.7', 'sars-cov-2-variants/lineage-proposals#1695']\n",
-      "['MC.8.1', 'sars-cov-2-variants/lineage-proposals#1779']\n",
-      "['MC.11.1', 'sars-cov-2-variants/lineage-proposals#1857']\n",
-      "['MC.12', 'sars-cov-2-variants/lineage-proposals#1865']\n",
-      "['MC.14', 'sars-cov-2-variants/lineage-proposals#1815']\n",
-      "['MM.1', 'sars-cov-2-variants/lineage-proposals#1624']\n",
-      "['MM.2', 'sars-cov-2-variants/lineage-proposals#1716']\n",
-      "['MK.1', 'sars-cov-2-variants/lineage-proposals#1605']\n",
-      "['MK.2', 'sars-cov-2-variants/lineage-proposals#1606']\n",
-      "['MK.3', 'sars-cov-2-variants/lineage-proposals#1655']\n",
-      "['KP.3.1.8', 'sars-cov-2-variants/lineage-proposals#1615']\n",
-      "['LW.1.1', 'sars-cov-2-variants/lineage-proposals#1776']\n",
-      "['KP.3.3.2', 'sars-cov-2-variants/lineage-proposals#1673']\n",
-      "['ML.1', 'sars-cov-2-variants/lineage-proposals#1683']\n",
-      "['KP.3.4.1', 'sars-cov-2-variants/lineage-proposals#1576']\n",
-      "['KP.3.5', 'sars-cov-2-variants/lineage-proposals#1630']\n",
-      "['KP.3.6', 'sars-cov-2-variants/lineage-proposals#1748']\n",
-      "['KP.6', 'sars-cov-2-variants/lineage-proposals#1682']\n",
-      "['KS.1.3', 'sars-cov-2-variants/lineage-proposals#1535']\n",
-      "['KS.1.4', 'sars-cov-2-variants/lineage-proposals#1752']\n",
-      "['LU.2.1', 'sars-cov-2-variants/lineage-proposals#1751']\n",
-      "['LU.2.1.1', 'sars-cov-2-variants/lineage-proposals#1751']\n",
-      "['LU.2.2', 'sars-cov-2-variants/lineage-proposals#1830']\n",
-      "['LF.5', 'sars-cov-2-variants/lineage-proposals#1627']\n",
-      "['LF.8', 'sars-cov-2-variants/lineage-proposals#1863']\n",
-      "['LF.8.1', 'sars-cov-2-variants/lineage-proposals#1863']\n",
-      "['LF.8.1.1', 'sars-cov-2-variants/lineage-proposals#1863']\n",
-      "['LF.9', 'sars-cov-2-variants/lineage-proposals#1718']\n",
-      "['LF.9.1', 'sars-cov-2-variants/lineage-proposals#1718']\n",
-      "['JN.1.16.4', 'sars-cov-2-variants/lineage-proposals#1702']\n",
-      "['MT.1', 'sars-cov-2-variants/lineage-proposals#1702']\n",
-      "['JN.1.16.5', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['LZ.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
-      "['MA.1.1', 'sars-cov-2-variants/lineage-proposals#1761']\n",
-      "['MA.1.1.1', 'sars-cov-2-variants/lineage-proposals#1761']\n",
-      "['MN.1', 'sars-cov-2-variants/lineage-proposals#1685']\n",
-      "['MS.1', 'sars-cov-2-variants/lineage-proposals#1692']\n",
-      "['JN.1.48.3', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['ME.1', 'sars-cov-2-variants/lineage-proposals#1657']\n",
-      "['JN.1.59.1', 'sars-cov-2-variants/lineage-proposals#1771']\n",
-      "['JN.1.63', 'sars-cov-2-variants/lineage-proposals#1513']\n",
-      "['JN.1.63.1', 'sars-cov-2-variants/lineage-proposals#1513']\n",
-      "['JN.1.67.1', 'sars-cov-2-variants/lineage-proposals#1253']\n",
-      "['MP.1', 'sars-cov-2-variants/lineage-proposals#1782']\n",
-      "['MP.1.1', 'sars-cov-2-variants/lineage-proposals#1782']\n",
-      "['JH.2', '#2068']\n",
-      "['XDR.1.1', 'sars-cov-2-variants/lineage-proposals#1795']\n",
-      "['XDV.1.1', 'sars-cov-2-variants/lineage-proposals#1820']\n",
-      "['XDV.1.2', 'sars-cov-2-variants/lineage-proposals#1617']\n",
-      "['XDV.1.2.1', 'sars-cov-2-variants/lineage-proposals#1617']\n",
-      "['XDV.1.3', 'sars-cov-2-variants/lineage-proposals#1597']\n",
-      "['XDV.1.5', 'sars-cov-2-variants/lineage-proposals#1840']\n",
-      "['XDV.1.10', 'sars-cov-2-variants/lineage-proposals#1849']\n",
-      "['XEC.1', 'sars-cov-2-variants/lineage-proposals#1869']\n"
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KR.1.4\"\n",
+      "['KR.1.4', 'sars-cov-2-variants/lineage-proposals#1670']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"JN.1.59.1+NK.1+NL.1\"\n",
+      "['NL.1', 'sars-cov-2-variants/lineage-proposals#1771']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.5\"\n",
+      "['LP.5', 'sars-cov-2-variants/lineage-proposals#1893']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.6\"\n",
+      "['LP.6', 'sars-cov-2-variants/lineage-proposals#1753']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LP.7\"\n",
+      "['LP.7', 'sars-cov-2-variants/lineage-proposals#1729']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MU.2.1\"\n",
+      "['MU.2.1', 'sars-cov-2-variants/lineage-proposals#1777']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.2.1\"\n",
+      "['KP.2.2.1', 'sars-cov-2-variants/lineage-proposals#1662']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.2.2\"\n",
+      "['KP.2.2.2', 'sars-cov-2-variants/lineage-proposals#1643']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NM.1\"\n",
+      "['NM.1', 'sars-cov-2-variants/lineage-proposals#1975']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.3.8\"\n",
+      "['KP.2.3.8', 'sars-cov-2-variants/lineage-proposals#1735']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.3.9+NG.1\"\n",
+      "['KP.2.3.9', 'sars-cov-2-variants/lineage-proposals#1742']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.3.9+NG.1\"\n",
+      "['NG.1', 'sars-cov-2-variants/lineage-proposals#1742']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.3.10\"\n",
+      "['KP.2.3.10', 'sars-cov-2-variants/lineage-proposals#1834']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"JN.1.59.1+NK.1+NL.1\"\n",
+      "['NK.1', 'sars-cov-2-variants/lineage-proposals#1771']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.3.11\"\n",
+      "['KP.2.3.11', 'sars-cov-2-variants/lineage-proposals#1594']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.6.1\"\n",
+      "['KP.2.6.1', 'sars-cov-2-variants/lineage-proposals#1757']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.25.1\"\n",
+      "['KP.2.25.1', 'sars-cov-2-variants/lineage-proposals#1699']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.25.2\"\n",
+      "['KP.2.25.2', 'sars-cov-2-variants/lineage-proposals#1768']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.25.3\"\n",
+      "['KP.2.25.3', 'sars-cov-2-variants/lineage-proposals#1649']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.2.26\"\n",
+      "['KP.2.26', 'sars-cov-2-variants/lineage-proposals#2141']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"JN.1.1.3+JN.1.6.1+JN.1.18+JN.1.1.5+KP.1.1+KP.2+JN.1.26,+JN.1.4.4,+JN.1.8.2,+JN.1.16.1+JN.1.30.1+KU.2+KP.4.2+KP.4.1+LA.2+LB.1+JN.1.24.1+KP.2.9+LE.1+LE.1.1+JN.1.48.2+JN.1.39.1+JQ.2.1.1,+LM.1+JN.1.18.5+LU.1+MQ.1+LF.6+LZ.2+KP.2.27+JN.1.11.2\"\n",
+      "['KP.2.27', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.1.1\"\n",
+      "['MC.1.1', 'sars-cov-2-variants/lineage-proposals#1932']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.10.1\"\n",
+      "['MC.10.1', 'sars-cov-2-variants/lineage-proposals#1946']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.10.2\"\n",
+      "['MC.10.2', 'sars-cov-2-variants/lineage-proposals#2015']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.17\"\n",
+      "['MC.17', 'sars-cov-2-variants/lineage-proposals#1989']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.18\"\n",
+      "['MC.18', 'sars-cov-2-variants/lineage-proposals#2075']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.19\"\n",
+      "['MC.19', 'sars-cov-2-variants/lineage-proposals#1809']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"MC.20\"\n",
+      "['MC.20', 'sars-cov-2-variants/lineage-proposals#2085']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.1.9\"\n",
+      "['KP.3.1.9', 'sars-cov-2-variants/lineage-proposals#2171']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.1.10\"\n",
+      "['KP.3.1.10', 'sars-cov-2-variants/lineage-proposals#1853']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.2.6\"\n",
+      "['KP.3.2.6', 'sars-cov-2-variants/lineage-proposals#1899']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.2.7\"\n",
+      "['KP.3.2.7', 'sars-cov-2-variants/lineage-proposals#2180']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.2.8\"\n",
+      "['KP.3.2.8', 'sars-cov-2-variants/lineage-proposals#2081']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.3.7\"\n",
+      "['KP.3.7', 'sars-cov-2-variants/lineage-proposals#1749']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"KP.4.2.5\"\n",
+      "['KP.4.2.5', 'sars-cov-2-variants/lineage-proposals#1667']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"JN.1.1.3+JN.1.6.1+JN.1.18+JN.1.1.5+KP.1.1+KP.2+JN.1.26,+JN.1.4.4,+JN.1.8.2,+JN.1.16.1+JN.1.30.1+KU.2+KP.4.2+KP.4.1+LA.2+LB.1+JN.1.24.1+KP.2.9+LE.1+LE.1.1+JN.1.48.2+JN.1.39.1+JQ.2.1.1,+LM.1+JN.1.18.5+LU.1+MQ.1+LF.6+LZ.2+KP.2.27+JN.1.11.2\"\n",
+      "['JN.1.11.2', 'sars-cov-2-variants/lineage-proposals#1089']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NJ.1\"\n",
+      "['NJ.1', 'sars-cov-2-variants/lineage-proposals#2068']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"NC.1\"\n",
+      "['NC.1', 'sars-cov-2-variants/lineage-proposals#1995']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.3.1+LF.3.1.1+LF.3.1.2\"\n",
+      "['LF.3.1.2', 'sars-cov-2-variants/lineage-proposals#1558']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.1.1\"\n",
+      "['LF.7.1.1', 'sars-cov-2-variants/lineage-proposals#2063']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.1.2+LF.7.2.1\"\n",
+      "['LF.7.2.1', 'sars-cov-2-variants/lineage-proposals#2067']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"LF.7.4\"\n",
+      "['LF.7.4', 'sars-cov-2-variants/lineage-proposals#1996']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"ND.1.1\"\n",
+      "['ND.1.1', 'sars-cov-2-variants/lineage-proposals#1982']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"ND.2\"\n",
+      "['ND.2', 'sars-cov-2-variants/lineage-proposals#1929']\n",
+      "https://github.com/sars-cov-2-variants/lineage-proposals/issues?q=milestone:\"ND.3\"\n"
      ]
     }
    ],
@@ -444,7 +461,7 @@
     "        if not('#' in line or 'issues/' in line):\n",
     "            if title in milestone_title_dict:\n",
     "                # this time we need to deal with the milestone \n",
-    "                \n",
+    "                #print(title)\n",
     "                issue_num=read_milestone_issues(title)\n",
     "                if issue_num!='0':\n",
     "                    if 'sars' in issue_num:\n",
@@ -474,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "1c9369e1",
    "metadata": {},
    "outputs": [
@@ -484,7 +501,7 @@
      "text": [
       "Add  1  references from cov-lineages/pango-designation.\n",
       "Upgrade  0  references from cov-lineages/pango-designation.\n",
-      "Add  85  references from sars-cov-2-variants/lineage-proposals.\n"
+      "Add  79  references from sars-cov-2-variants/lineage-proposals.\n"
      ]
     }
    ],
